[package]
name = "wm-burst"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
description = "Burst heavy Rust compiles and CPU jobs to a dedicated cloud box via ssh+sccache, no fleet mesh required."

[[bin]]
name = "wm-burst"
path = "src/main.rs"

[lib]
name = "wm_burst"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
# unreachable_pub is noisy in application crates with a companion lib surface for tests;
# all pub items here are intentionally accessible from integration tests via the lib target.

[lints.clippy]
# Strict everyday lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# BAD_RUST-aligned restrictions: error on dishonest patterns
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
as_conversions = "warn"
float_arithmetic = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Tame pedantic noise without weakening BAD_RUST coverage
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[features]
# Hardware-reality feature gate: real SSH/sccache/provider calls.
# Off by default so cargo test stays green on hosts without real infra.
real-hardware = []

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
# Error handling
anyhow = "1"
# Serialization for config.toml and status JSON
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
# SIGPIPE reset
sigpipe = "0.1"
# Filesystem paths
dirs = "5"
# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
